// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSummary displays loading message when appropriate 1`] = `
<div
  className="infobox"
>
  <div
    style={
      {
        "float": "right",
      }
    }
  >
    ObjectThumbnail
  </div>
  <h2>
    Loading...
  </h2>
  <div />
  
  
  <br
    style={
      {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`ObjectSummary renders information from metadata when available 1`] = `
<div
  className="infobox"
>
  <div
    style={
      {
        "float": "right",
      }
    }
  >
    ObjectThumbnail
  </div>
  <h2>
    My title
  </h2>
  <div>
    <p>
      Hello 
      <b>
        world
      </b>
      !
    </p>
  </div>
  ObjectButtonBar
  ObjectOrder
  <br
    style={
      {
        "clear": "both",
      }
    }
  />
</div>
`;
